# openlineage-meltano

./: .copier-answers.yml  .gitignore  README.md  pyproject.toml
meltanolineage_ext/: __init__.py  extension.py  main.py  pass_through.py
openlineage_ext/: __init__.py  extension.py  main.py  pass_through.py
openlineage_ext/cli/: __init__.py
openlineage_ext/cli/commands/: lineage.py
