[tool.poetry]
name = "meltanolineage-ext"
version = "0.0.1"
description = "`meltanolineage-ext` is a Meltano utility extension."
authors = ["Henning Holgersen"]
license = "Apache 2.0"
packages = [
    { include = "meltanolineage_ext" }
    # uncomment this if you want to include static assets
    # { include = "files_meltanolineage-ext.*" }
]


[tool.poetry.dependencies]
python = "<3.12,>=3.7"
PyYAML = "^6.0.0"
click = "^8.1.3"
typer = "^0.6.1"
"meltano-lineage" = {git = "https://github.com/radbrt/meltano-meta.git", rev="main"}
"meltano.edk"= {git = "https://github.com/meltano/edk.git", rev="main"}

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^3.9.0"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
meltanolineage_extension = 'meltanolineage_ext.main:app'
meltanolineage_invoker = 'meltanolineage_ext.pass_through:pass_through_cli'
